--- a/css/styles.css
+++ b/css/styles.css
@@ -490,3 +490,306 @@ display: flex;
 .footer-link:focus {
     background-color: #31D0AA;
 }
+
+.subscribe-text {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+}
+
+.subscribe-div {
+    display: flex;
+}
+
+.subscribe-form-label {
+    font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: #fff;
+        
+        
+}
+
+.subscribe-input {
+    border: 1px solid #fff;
+        border-radius: 4px;
+        width: 264px;
+        height: 40px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background-color: #2e2f42;
+        padding-left: 16px;
+        resize: none;
+            outline: none;   
+            color: #fff;
+            transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.subscribe-input::placeholder {
+  color: #fff;
+}
+
+.subscribe-input:hover,
+.subscribe-input:hover {
+border: 1px solid #31D0AA;
+}
+
+.submit-btn {
+    border-radius: 4px;
+        padding: 8px 24px;
+        width: 165px;
+        height: 40px;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            text-align: center;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        background: #4d5ae5;
+        border: none;
+        margin-left: 22px;
+        
+}
+
+.subscribe-svg {
+    margin-left: 16px;
+}
+
+/* #region backdrop-modal */
+.backdrop {
+    position: fixed;
+    z-index: 99999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), pointer-events 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal {
+background-color: #fcfcfc;
+position: absolute;
+top: 50%;
+left: 50%;
+border-radius: 4px;
+width: 408px;
+min-height: 584px;
+padding: 72px 24px 24px 24px;
+transform: translate(-50%, -50%);
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-open {
+    visibility: visible;
+    pointer-events: auto;
+    opacity: 1;
+}
+
+.ourteam-svg {
+display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    border-radius: 100%;
+    background-color: #E7E9FC ;
+    fill: #2e2f42;
+    width: 24px;
+    height: 24px;
+    line-height: 0;
+    padding: 0;
+    border: none;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+fill: #fff;
+background-color: #404BBF;
+border: none;
+}
+
+.modal-text {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+        width: 360px;
+        margin-bottom: 16px;
+}
+
+.form--wraper-cont {
+    margin-bottom: 8px;
+}
+
+.modal-form-label {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        display: block;
+        margin-bottom: 4px;
+}
+
+.modal-cont-input {
+    position: relative;
+}
+
+.modal-input {
+    width : 100% ;
+    height : 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+     border-radius: 4px;
+     padding-left: 38px;
+     outline: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-input:focus {
+    border-color: #4d5ae5;
+    
+
+}
+
+.modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+.modal-input:focus + .modal-icon {
+    fill: #4d5ae5;
+}
+
+.form--wraper-cont-coment {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+}
+
+.modal-form-label-coment {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        display: block;
+        margin-bottom: 4px;
+}
+
+.form--wraper-cont-coment {
+    margin-bottom: 14px;
+}
+
+.modal-textarea {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        width: 360px;
+        height: 120px;
+        padding: 8px 16px;
+        resize: none;
+        outline: none;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: block;
+}
+
+.modal-textarea:focus {
+    border-color: #4d5ae5;
+}
+
+.modal-textarea::placeholder {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-cont-checkbox{
+    margin-bottom: 24px;
+}
+
+.custom-checkbox {
+    border-radius: 2px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        width: 16px;
+        height: 16px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 8px;
+}
+
+.svg-checkbox {
+    fill: transparent;
+}
+
+
+.custom-lebal-user-checkbox {
+    cursor: pointer;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+}
+
+.privacy-policy {
+    line-height: 1.3;
+        text-decoration: underline;
+        color: #4d5ae5;
+}
+
+.checkbox:checked + .custom-lebal-user-checkbox > .custom-checkbox {
+    border-color: transparent;
+    background-color: #404BBF;
+}
+
+.modal-submit {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #fff;
+        background-color: #4d5ae5;
+        border-radius: 4px;
+            padding: 16px 32px;
+            min-width: 169px;
+            height: 56px;
+            border: none;
+            margin-left: auto;
+            margin-right: auto;
+            display: flex;
+            justify-content: center;
+}
+
+
+
+/* #endregion backdrop-modal */
